fix(security): mitigate SQL injection, command injection, and secret exposure
Agent-Logs-Url: https://github.com/imran-ctl/security-alert-test/sessions/f31ee1df-b9ed-41c2-905f-0c808cadb6e5

Co-authored-by: imran-ctl <68700021+imran-ctl@users.noreply.github.com>